# jmanager

./: .gitignore  .markdown-preview.html  CONTRIBUTING.rst  Makefile  README.md  README.rst  jupyter.pid  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
jmanager/: __init__.py  jmanager.py
jmaster/: __init__.py  cli.py  jmaster.py
tests/: __init__.py  test_jmanager.py  test_jmaster.py
