[tool.poetry]
name = "jmanager"
version = "1.1.3"
description = "A lightweight Jupyter process manager"
authors = ["Yasunori Horikoshi <hotoku@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
